# Oxide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  example_design.html  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-main.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-25.jsonl  tmux-hook-2026-04-26.jsonl  turns-2026-04-25.jsonl  turns-2026-04-26.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
docs/: BENCHMARKS.md  PROJECT_OVERVIEW.md
scripts/: set-version.mjs
src/: app.html
src-tauri/: Cargo.toml  errors-phase4-2.txt  errors-phase4.txt  errors.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: arena.rs  file_entry.rs  file_tree.rs  mod.rs
src-tauri/src/mft/: mod.rs  parser.rs  reader.rs  sector_reader.rs  volume.rs
src-tauri/src/scan/: filesystem.rs  mft.rs  mod.rs  progress.rs  types.rs
src-tauri/src/treemap/: layout.rs
src/lib/: oxide.ts  types.ts  utils.ts
src/lib/components/: FileList.svelte  TreeView.svelte  Treemap.svelte
src/routes/: +page.svelte
